first optimized worked version