@@ -1,14 +1,12 @@
 package ru.andreyheaven.bookserver.repository;
 
 import org.springframework.cache.annotation.*;
-import org.springframework.data.jpa.repository.*;
+import org.springframework.data.jdbc.repository.query.*;
 import org.springframework.data.repository.*;
 import org.springframework.data.repository.query.*;
 import org.springframework.data.util.*;
 import ru.andreyheaven.bookserver.domain.*;
-import java.math.*;
 import java.util.*;
-import java.util.stream.*;
 
 public interface AuthorRepository extends CrudRepository<Author, Integer> {
 
@@ -18,16 +16,16 @@ public interface AuthorRepository extends CrudRepository<Author, Integer> {
             where upper(a.surname) like :prefix
             group by ch
             order by ch;
-            """, nativeQuery = true)
-    List<Map<String, Object>> findPrefixes_(@Param("prefix") String prefix, @Param("prefixLength") Integer prefixLength);
+            """)
+    List<AuthorCount> findPrefixes_(@Param("prefix") String prefix, @Param("prefixLength") Integer prefixLength);
 
     @Cacheable("author_index")
-    default List<Pair<String, Long>> findPrefixes(String prefix) {
+    default List<Pair<String, Integer>> findPrefixes(String prefix) {
         return findPrefixes_(prefix + "%", prefix.length() + 1).stream()
-                .map(stringObjectMap -> Pair.of(stringObjectMap.get("ch").toString(), ((BigInteger) stringObjectMap.get("count")).longValue())).collect(Collectors.toList());
+                .map(stringObjectMap -> Pair.of(stringObjectMap.getCh(), stringObjectMap.getCount())).toList();
     }
 
-    @Query("select a from Author a where upper(a.surname) like :prefix")
+    @Query("select * from authors where upper(surname) like :prefix order by surname")
     List<Author> findBySurnameStartsWith_(String prefix);
 
     @Cacheable("authors")
@@ -35,4 +33,25 @@ public interface AuthorRepository extends CrudRepository<Author, Integer> {
         return findBySurnameStartsWith_(prefix + "%");
     }
 
+    @Override
+    @Cacheable("author")
+    Optional<Author> findById(Integer id);
+
+    class AuthorCount {
+        private String ch;
+        private Integer count;
+
+        public AuthorCount(String ch, Integer count) {
+            this.ch = ch;
+            this.count = count;
+        }
+
+        public String getCh() {
+            return ch;
+        }
+
+        public Integer getCount() {
+            return count;
+        }
+    }
 }
